fix event layout bug, update event schema

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -114,6 +114,10 @@
   .prose {
     @apply max-w-2xl;
   }
+
+  .prose a {
+    word-break: break-word;
+  }
 }
 
 .stop-scrolling {
